[package]
name = "SamuelVille_CLI"
version = "0.1.0"
description = "CLI required for all citizens."
authors = ["Samuel Sharp <samuel@samuelsharp.com>"]
edition = "2018"

[[bin]]
name = "samuelville"
path = "main.rs"

[package.metadata.deb]
name = "SamuelVille Citizen CLI"
copyright = "Copyright 2020 Samuel Sharp"
